argo/rollouts/ingress.yaml
# ./scripts/env-to-file.sh --file=argo/rollouts/ingress.yaml | k apply -f -
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo-rollouts.$APP_DOMAIN`)
      priority: 30
      services:
        - name: argo-rollouts-helm-dashboard
          port: 3100
